# rust-mcp-filesystem

./: .release-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  test_invalid_pattern.rs
.github/workflows/: release-pr.yml
docs/: README.md  _coverpage.md  capabilities.md  quickstart.md
docs/guide/: install.md
src/: cli.rs  error.rs  fs_service.rs  handler.rs  main.rs  tools.rs
src/fs_service/: search.rs  utils.rs
src/fs_service/io/: read.rs
src/fs_service/search/: ast.rs  content.rs  files.rs  glob_utils.rs  tree.rs
src/tools/: directory_tree.rs  read_file_lines.rs  search_code_ast.rs  search_file.rs  search_files_content.rs
tests/: test_from_end_optimization.rs  test_fs_service.rs
