[package]
name = "rust-mcp-filesystem"
version = "0.3.12"
edition = "2024"
repository = "https://github.com/rust-mcp-stack/rust-mcp-filesystem"
authors = ["Ali Hashemi"]
description = "Blazing-fast, asynchronous MCP server for seamless filesystem operations."
homepage = "https://github.com/rust-mcp-stack/rust-mcp-filesystem"


[package.metadata.wix]
upgrade-guid = "944FE3C9-C8C2-4114-8C8F-5330720E781F"
path-guid = "0BBAC013-2FD2-42B6-9815-D992FAD3F88E"
license = false
eula = false

[dependencies]
rust-mcp-sdk = { version = "0.7", default-features = false, features = [
    "server",
    "macros",
    "stdio",
    "2025_06_18",
] }

thiserror = { version = "2.0" }
dirs = "6.0"
walkdir = "2.5"
ignore = "0.4"
similar = "=2.7"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = "1.4"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
grep = "0.3"
base64 = "0.22"
infer = "0.19.0"
rayon = "1.11.0"
sha2 = "0.10.9"
globset = "0.4"
ast-grep-core = "0.39"
ast-grep-language = "0.39"
rev_lines = "0.3"

[dev-dependencies]
tempfile = "3.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.typos]
default.extend-ignore-re = ["4ded5ca"]
